# STU-LBX_Library

./: CMakeLists.txt  README.md
LibLBX/: lbx.h  lbx_defs.h  lbx_graphics.h  lbx_meta.h  lbx_record_type_flic.h  lbx_record_type_font.h  lbx_record_type_palette.c  lbx_record_type_palette.h  lbx_types.h  lib_lbx.c  lib_lbx.h  lib_lbx_display.c  lib_lbx_display.h  lib_lbx_file_type_bmp.c  lib_lbx_file_type_bmp.h  lib_lbx_load.c  lib_lbx_load.h  lib_lbx_load_header.c  lib_lbx_load_header.h  lib_lbx_load_records.c  lib_lbx_load_records.h  lib_lbx_meta.c  lib_lbx_meta.h  lib_lbx_meta_data.c  lib_lbx_meta_data.h  lib_lbx_process.c  lib_lbx_process.h  lib_lbx_process_lbx.c  lib_lbx_process_lbx.h  lib_lbx_process_records.c  lib_lbx_process_records.h  lib_lbx_record.c  lib_lbx_record.h  lib_lbx_record_display.c  lib_lbx_record_display.h  lib_lbx_record_flic.c  lib_lbx_record_flic.h  lib_lbx_record_image.c  lib_lbx_record_image.h  lib_lbx_record_palette.c  (+14 more)
LibLBX/SDL2/: mom_main_colormap.h  palette_viewer.c  palette_viewer.h  sdl2_test.c  sdl2_test.h  sdl_colormap.c  sdl_colormap.h
LibLBX/test/: CMakeLists.txt  lib_lbx_test.c  lib_lbx_test.h
LibLBX/test/src/: lib_lbx_test.c  lib_lbx_test.h
docs/: ARMYLIST000_BIN.npp  BitmapHeaderFields.ods  FileType_BMP_DataGridLayou.ods  LibLBX-FlowChart.odg  LibLBX.md  MAIN000.c  MAIN000_BIN.npp  MAIN000_BMP.ods  MAIN000_BMP_ILSe-.npp  MAIN000_BMP_ILSe.npp  MAIN000_BMP_TBD.npp  MAIN001_BIN.npp  MAIN039_BIN.npp  Matrix_NOT_Transpose-Discord_Help_Hurubo_Herpes.npp  Matrix_NOT_Transpose_Final-Discord_Help_Hurubo_Herpes.txt  MoM131_LBX_FileNames.ods  MoM_Images_and_FLIC_MatchUp.ods  MoM_Palette.ods  Palette_ColorMap_BMP.npp  STU_LBX_MOM_Files.ods  STU_LBX_MOM_Formats.md  STU_LBX_MOM_Formats.ods  Transform_Image_Matrix-FLIC_to_BMP-.ods  Transform_Image_Matrix-FLIC_to_BMP-eg-.ods  Transform_Image_Matrix-FLIC_to_BMP-eg.ods  Transform_Image_Matrix-FLIC_to_BMP.ods  color_data.xlsx  math with Hurubo on Discord.ods  momrtgt-code__QMoMDialogs__DialogLbxEditor.cpp  programmers_view_on_digital_images_the_essentials.odt  scraps-Palette-Ilse.c  test_8x5_bmp.npp  the-bmp-file-format-part-1.txt
docs/palette/: FONTS002_BIN.npp
